<resources>
    <string name="app_name">ASQR</string>
    <string name="app_name_long">A Simple Question Review tool</string>

    <!-- generic strings -->
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>

    <!-- Menu strings -->
    <string name="menuSingle">Single language quiz</string>
    <string name="menuFull">Full quiz</string>
    <string name="menuImport">Import quiz</string>
    <string name="menuEditor">Quiz editor</string>
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About</string>

    <!-- About -->
    <string name="aboutAuthor">Made with love by</string>
    <string name="aboutAuthors">Konrad Jasiński\nMediocre Game Studios</string>

    <!-- Settings -->
    <string name="settingsInterpunctuation">Ignore interpunctuation</string>
    <string name="settingsCase">Case sensitive</string>
    <string name="settingsNight">Night mode</string>

    <!-- Quiz -->
    <string name="toastBack">Come back soon!</string>
</resources>
