<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/startSingle"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:text="@string/menuSingle"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toTopOf="@+id/startImport"
        app:layout_constraintEnd_toStartOf="@+id/startFull"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startFull"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/menuFull"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toTopOf="@+id/startEditor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startSingle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startImport"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="2dp"
        android:text="@string/menuImport"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toTopOf="@+id/startSettings"
        app:layout_constraintEnd_toStartOf="@+id/startEditor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSingle" />

    <Button
        android:id="@+id/startEditor"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="32dp"
        android:text="@string/menuEditor"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toTopOf="@+id/startExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startImport"
        app:layout_constraintTop_toBottomOf="@+id/startFull" />

    <Button
        android:id="@+id/startSettings"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="64dp"
        android:text="@string/menuSettings"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startImport" />

    <Button
        android:id="@+id/startExit"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:onClick="startAbout"
        android:text="@string/menuAbout"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startSettings"
        app:layout_constraintTop_toBottomOf="@+id/startEditor" />

</androidx.constraintlayout.widget.ConstraintLayout>